// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RetirementDetails renders correctly issuances 1`] = `
<div>
  <div
    class="css-1ofqig9"
  >
    <div
      class="css-h9i6sp"
    >
      <div
        class="css-1i18okm"
      >
        <h3
          class="chakra-heading css-zux3ex"
        >
          Retirements
        </h3>
      </div>
    </div>
    <div
      class="css-xsnn5"
    >
      <table
        class="chakra-table searchTableSmall css-0"
      >
        <thead
          class="css-893o8r"
        >
          <tr
            class="css-0"
          >
            <th
              class="css-0"
            >
              <div
                class="css-0"
              >
                Quantity
              </div>
            </th>
            <th
              class="css-0"
            >
              <div
                class="css-0"
              >
                Retirement Notes
              </div>
            </th>
          </tr>
        </thead>
        <tbody
          class="css-0"
        >
          <tr
            class="noClick css-1ow40j4"
          >
            <td
              class="css-0"
            >
              191
            </td>
            <td
              class="css-0"
            >
              --
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`RetirementDetails renders correctly with empty array 1`] = `
<div>
  <div
    class="css-1ofqig9"
  >
    <div
      class="css-h9i6sp"
    >
      <div
        class="css-1i18okm"
      >
        <h3
          class="chakra-heading css-zux3ex"
        >
          Retirements
        </h3>
      </div>
    </div>
    <div
      class="css-jof02b"
    >
      No retirement data available for this issuance
    </div>
  </div>
</div>
`;
